--- a/index.html
+++ b/index.html
@@ -12,37 +12,42 @@
       <h1 id="title">freeCodeCamp Survey Form</h1>
       <p id="description">Thank you for taking the time to help us improve the platform</p>
       <form action="#" id="survey-form">
-        <div>
+        <div id="group">
           <label for="" id="name-label">Name<input type="text" id="name" value="" placeholder="Enter your name" required></label>
+        </div>
+        <div id="group">
           <label for="" id="email-label">Email<input type="email" id="email" value="" placeholder="Enter your email"  required></label>
+        </div>
+        <div id="group">
           <label for="" id="number-label">Age<input type="number" name="number" id="number" min="10" max="100" placeholder="Age"></label>
         </div>
-        <div>
-          <label for="">Which option best describes your current role?</label>
+
+        <div id="select-group">
+          <p>Which option best describes your current role?</p>
           <select name="" id="dropdown">
-          <option value="student">select current:role</option>
+          <option value="#">select current:role</option>
           <option value="student">Student</option>
-          <option value="student">Full Time Job</option>
-          <option value="student">Full Time Learner</option>
+          <option value="full-time-job">Full Time Job</option>
+          <option value="full-time-learner">Full Time Learner</option>
           </select>
         </div>
-        <div>
-          <label for="">Would you recommend freeCodeCamp to a friend?</label>
-          <label for=""><input type="radio">Definitely</label>
-          <label for=""><input type="radio">Maybe</label>
-          <label for=""><input type="radio">Not sure</label>
+        <div id="select-group">
+          <p>Would you recommend freeCodeCamp to a friend?</p>
+          <label ><input type="radio" value="defintely">Definitely</label>
+          <label ><input type="radio" value="maybe">Maybe</label>
+          <label ><input type="radio" value="not-sure">Not sure</label>
         </div>
-        <div>
-          <label for="">What is your favorite feature of freeCodeCamp?</label>
+        <div id="select-group">
+          <p>What is your favorite feature of freeCodeCamp?</p>
           <select name="#" id="#">
-            <option value="">Selec an option</option>
-            <option value="">Challenge</option>
-            <option value="">Projects</option>
-            <option value="">Community</option>
+            <option value="#">Selec an option</option>
+            <option value="challenge">Challenge</option>
+            <option value="projects">Projects</option>
+            <option value="community">Community</option>
           </select>
         </div>
-        <div>
-          <label for="">What would you like to see improved? (Check all that apply)</label>
+        <div id="select-group">
+          <p>What would you like to see improved? (Check all that apply)</p>
           <label for=""><input type="checkbox">Front-end Projects</label>
           <label for=""><input type="checkbox">Back-end Projects</label>
           <label for=""><input type="checkbox">Data Visualization</label>
