--- a/index.html
+++ b/index.html
@@ -31,12 +31,14 @@
           <option value="full-time-learner">Full Time Learner</option>
           </select>
         </div>
+        <hr>
         <div id="select-group">
           <p>Would you recommend freeCodeCamp to a friend?</p>
-          <label ><input type="radio" value="defintely">Definitely</label>
-          <label ><input type="radio" value="maybe">Maybe</label>
-          <label ><input type="radio" value="not-sure">Not sure</label>
+          <label ><input name="defintely" type="radio" value="defintely">Definitely</label>
+          <label ><input name="defintely" type="radio" value="maybe">Maybe</label>
+          <label ><input name="defintely" type="radio" value="not-sure">Not sure</label>
         </div>
+        <hr>
         <div id="select-group">
           <p>What is your favorite feature of freeCodeCamp?</p>
           <select name="#" id="#">
@@ -46,19 +48,21 @@
             <option value="community">Community</option>
           </select>
         </div>
+        <hr>
         <div id="select-group">
           <p>What would you like to see improved? (Check all that apply)</p>
-          <label for=""><input type="checkbox">Front-end Projects</label>
-          <label for=""><input type="checkbox">Back-end Projects</label>
-          <label for=""><input type="checkbox">Data Visualization</label>
-          <label for=""><input type="checkbox">Challenges</label>
-          <label for=""><input type="checkbox">Open Source Community</label>
+          <label for=""><input type="checkbox" value="front-end">Front-end Projects</label>
+          <label for=""><input type="checkbox" value="back-end">Back-end Projects</label>
+          <label for=""><input type="checkbox" value="data">Data Visualization</label>
+          <label for=""><input type="checkbox" value="challenge">Challenges</label>
+          <label for=""><input type="checkbox" value="community">Open Source Community</label>
         </div>
-        <div>
+        <hr>
+        <div id="select-group">
           <p>Any comments or suggestions?</p>
-          <textarea name="" id="" cols="30" rows="10"></textarea>
+          <textarea name="textarea" id="textarea" cols="30" rows="10" minlength="50" maxlength="150" placeholder="Comments"></textarea>
         </div>
-        <div>
+        <div id="select-group">
           <button id="submit">Submit</button>
         </div>
       </form>
